<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- LinearLayout dentro da ScrollView / dentro do ScrollView só pode 1 gerenciador de layout (viewgroup) -->
    <!-- match_parent = tela inteira / wrap_content = o que precisar -->
    <!-- se poe as funcionalidades no MainActivity.kt / identificando cada "objeto" por id -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="48sp"
                android:textStyle="bold"
                android:text="@string/str_login"
                android:textColor="@color/bg_botao_titulo"
                android:gravity="center"
                android:layout_marginBottom="60dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tillogin"
                android:hint="@string/str_hint_login"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginBottom="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tieLogin"
                    android:maxLength="150"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tilSenha"
                android:hint="@string/str_hint_senha"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginBottom="24dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tieSenha"
                    android:maxLength="8"
                    android:inputType="numberPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnEntrar"
                android:text="@string/str_entrar"
                android:backgroundTint="@color/bg_botao_titulo"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/cor_do_botao"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_nao_tenho_cadastro"
                android:textColor="@color/bg_botao_titulo"
                android:gravity="center"
                android:id="@+id/tvCadastro"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>